# rust-todo

./: Cargo.toml  README.md
src/: app.rs  components.rs  constants.rs  lib.rs  main.rs  screen.rs  traits.rs
src/app/: app.rs
src/components/: chars.rs  count_square.rs  mod.rs  square.rs  text.rs  traits.rs
src/primitives/: mod.rs  square.rs
src/screen/: mod.rs  screen.rs
