[package]
name = "rust-todo"
version = "0.1.0"
authors = ["Nathan Kessler <nathant93@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
tempfile = "3.3.0"
unicode-segmentation = "1.9.0"
